--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
-numpy==1.24.4
-albumentations==0.4.3
-opencv-python==4.1.2.30
-pudb==2019.2
-invisible-watermark
+torch==1.13.1
+torchvision==0.14.1
+omegaconf==2.2.3
+opencv-python
 imageio==2.9.0
-imageio-ffmpeg==0.4.2
-pytorch-lightning==1.4.2
-omegaconf==2.1.1
-test-tube>=0.7.5
-streamlit>=0.73.1
-einops==0.3.0
-torch-fidelity==0.3.0
-transformers==4.19.2
-torchmetrics==0.6.0
-kornia==0.6
-matplotlib==3.7.0
-detectors==0.1.8
-pyyaml
-gdown
--e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
--e git+https://github.com/openai/CLIP.git@main#egg=clip
+transformers==4.26.1
+diffusers==0.13.1
+accelerate==0.20.0
+scipy==1.9.1
+hydra-core==1.2.0
+tqdm
+gradio==3.23.0
+pillow
+packaging
+numpy
